# web-reader

./: .env.devcontainer  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  PHASE_BUILD_COMPLETE.md  PHASE_BUILD_SUMMARY.md  README.DEBUG.md  README.RELEASE.md  README.TEST.md  README.VSCODE-TESTING.md  README.md  package-lock.json  package.json  pyproject.toml  start.ps1  stop.ps1
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: CONTRIBUTING.md  copilot-instructions.md  example-questions.md  implementation.md  notes.md  project-plan.md  requirements.md  use-case.md
.github/agents/: web-reader-developer.agent.md  web-reader-review.agent.md
.github/doc/: FINAL_CHECKLIST.md  IMPLEMENTATION_CONTINUATION.md  PHASE4_LAYOUT_DECISION.md  PHASE_BUILD_COMPLETE.md  PHASE_BUILD_SUMMARY.md  PROPERTY_MAPPING.md  PROPERTY_MAPPING_COMPLETE.md  PROPERTY_MAPPING_INTEGRATION_TESTS.md  PROPERTY_MAPPING_SETUP.md  REFACTORING_PLAN_20260526.md  REFRACTOR_BASELINE_20260526.md  REVIEW_SUMMARY.md  SSR_IMPLEMENTATION.md  TASKFORM_ZOD_INTEGRATION.md  VERIFICATION_REPORT.md  ZOD_INTEGRATION_SUMMARY.md
.github/instructions/: backend.instructions.md  fastmcp.instructions.md  frontend.instructions.md  langchain.instructions.md  review-workflow.instructions.md
.github/prompts/: code-review.prompt.md  phase-build.prompt.md  release-mode-review.prompt.md  strict-developer-loop.prompt.md  update-dependencies.prompt.md
.github/workflows/: ci.yml
apps/backend/: .dockerignore  Dockerfile  PHASE2_PROGRESS.md  README.md  server.py
apps/backend/src/: artifacts.py  config.py  langchain.py  models.py  tasks.py
apps/backend/tests/: conftest.py
apps/fastmcp/: Dockerfile  README.md  pyproject.toml  server.py
apps/fastmcp/src/: __init__.py  browser.py  config.py  filtering.py  tools.py
apps/fastmcp/tests/: conftest.py
apps/fastmcp/tests/e2e/: conftest.py  test_full_workflow.py
apps/fastmcp/tests/integration/: conftest.py
apps/fastmcp/tests/unit/: conftest.py  test_browser_management.py  test_domain_filtering.py  test_rate_limiting.py  test_task_context_isolation.py
apps/frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/src/: router.tsx
apps/langchain/: Dockerfile  README.md  pyproject.toml  pytest.ini  server.py
apps/langchain/src/: __init__.py  agent.py  callbacks.py  collector.py  config.py  search.py  tools.py
apps/langchain/tests/: conftest.py
apps/langchain/tests/e2e/: conftest.py  test_research_workflow.py
apps/langchain/tests/integration/: conftest.py
apps/langchain/tests/unit/: conftest.py  test_agent.py  test_agent_expanded.py  test_callbacks.py  test_link_extractor.py  test_search.py  test_tools.py
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-debug.txt  requirements-test.txt  requirements.txt  server.py
backend/src/: __init__.py  config.py  langchain.py  models.py  tasks.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_api_workflow.py
backend/tests/integration/: conftest.py  test_langchain_integration.py  test_property_mapping.py
backend/tests/unit/: conftest.py  test_artifacts.py  test_models.py
config/: allowed-domains.txt  disallowed-domains.txt
container/: docker-compose.yml  start.ps1  stop.ps1
docker/: docker-compose.dev.yml  docker-compose.yml
fastmcp/: CONTEXT_ISOLATION.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-debug.txt  requirements-test.txt  requirements.txt  server.py  server_new.py
fastmcp/src/: __init__.py  browser.py  config.py  filtering.py  rate_limiting.py  tools.py
fastmcp/tests/: __init__.py  conftest.py
fastmcp/tests/e2e/: conftest.py  test_full_workflow.py
fastmcp/tests/integration/: conftest.py  test_playwright_integration.py
fastmcp/tests/unit/: test_browser_management.py  test_task_context_isolation.py  test_tools.py  test_url_normalization.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  ZOD_USAGE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsr.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: client.tsx  main.tsx  router.tsx
frontend/src/components/: AdvancedOptions.tsx  Footer.tsx  NotFound.tsx  TaskDetail.tsx  TaskForm.tsx  TaskHistory.tsx
frontend/src/entries/: client.tsx  server.tsx  ssr.tsx  tailwind-setup.ts
frontend/src/lib/: advanced-options-context.tsx  api-client.ts  api.ts  config.ts  logger.ts  query-client.ts  safeParseData.ts  server-functions.ts  types.ts  websocket.ts  ws.ts
frontend/src/routes/: __root.tsx  history.tsx  index.tsx
frontend/src/schemas/: task.schema.ts
frontend/src/styles/: tailwind.css
frontend/src/types/: task.ts
frontend/tests/: setup.ts
frontend/tests/browser/: Accessibility.browser.test.tsx  Alert.browser.test.tsx  Badge.browser.test.tsx  Button.browser.test.tsx  Card.browser.test.tsx  Spinner.browser.test.tsx  TaskDetail.browser.test.tsx  TaskDetailUI.browser.test.tsx  TaskForm.browser.test.tsx  TaskFormErrors.browser.test.tsx  TaskFormValidation.browser.test.tsx  WEBSOCKET_MOCK_STRATEGY.md.ts
frontend/tests/components/: TaskForm.a11y.test.tsx
frontend/tests/e2e/: UC-01.spec.ts  UC-02.spec.ts  (+2 more)
infra/compose/: compose.dev.yaml  compose.prod.yaml  compose.yaml
infra/scripts/: wr  wr.ps1
langchain/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-debug.txt  requirements-test.txt  requirements.txt  server.py
langchain/src/: agent.py  callbacks.py  config.py  link_extractor.py  mcp_client.py  tools.py
langchain/tests/: conftest.py
langchain/tests/e2e/: conftest.py  recorder_websocket.py  test_research_workflow.py
langchain/tests/integration/: conftest.py  test_service_integration.py
langchain/tests/unit/: test_agent.py  test_agent_expanded.py  test_answer_extractor.py  test_mcp_client.py  test_tools.py
scripts/: setup-vscode-testing.sh  tail-all-logs.sh  test-all.sh
(+42 files in other folders)
