[project]
name = "web-reader-backend"
version = "0.1.0"
description = "Backend API for the Web Reader project (FastAPI service)."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
	"fastapi>=0.128,<0.129",
	"uvicorn[standard]>=0.40.0,<0.41.0",
	"python-multipart>=0.0.21,<0.0.22",
	"websockets>=15.0,<16.0",
	"httpx>=0.28.0,<0.29.0",
	"pydantic>=2.10.0,<3.0.0",
	"loguru>=0.7.2,<0.8.0",
	"aiofiles>=25.1,<26.0",
]

[dependency-groups]
test = [
	"pytest>=9.0.1,<10.0.0",
	"pytest-asyncio>=1.3,<2.0.0",
	"pytest-cov>=7.0.0,<8.0.0",
	"pytest-timeout>=2.2.0,<3.0.0",
	"pytest-mock>=3.14.0,<4.0.0",
	"ruff>=0.14,<0.15",
	"python-dotenv>=1.2,<2.0.0",
]
debug = [
	"debugpy>=1.8,<2.0.0",
	"watchfiles>=1.1,<2.0.0",
]
dev = [
	"ruff>=0.14,<0.15",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
