[tool.poetry]
name = "web-reader-fastmcp"
version = "0.1.0"
description = "FastMCP server for browser automation via Model Context Protocol"
authors = ["Web Reader Team"]
readme = "README.md"
packages = [{include = "fastmcp"}]

[tool.poetry.dependencies]
python = "^3.13"
fastmcp = "^0.3.0"
playwright = "^1.56.0"
pydantic = "^2.10.0"
loguru = "^0.7.2"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.8.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=fastmcp --cov-report=html --cov-report=term"
