[tool.poetry]
name = "web-reader-fastmcp"
version = "0.1.0"
description = "FastMCP server for browser automation via Model Context Protocol"
authors = ["Web Reader Team"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastmcp = "^2.0.0"
playwright = "^1.56.0"
pydantic = "^2.10.0"
loguru = "^0.7.2"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "1.3.0"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.2.0"
ruff = "^0.8.0"
mypy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.17"
watchfiles = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=fastmcp --cov-report=html --cov-report=term"
