[tool.poetry]
name = "web-reader-langchain"
version = "0.1.0"
description = "LangChain orchestration service for the Web Reader project."
authors = ["Web Reader Developers <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128"
uvicorn = { version = "0.40.0", extras = ["standard"] }
pydantic = "^2.11.0"
python-multipart = "^0.0.21"
httpx = "^0.28.1"
fastmcp = "^2.13"
langchain = "^1.1.0"
langchain-core = "^1.1.0"
langchain-ollama = "1.0.1"
loguru = "^0.7.3"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.2.0"
python-dotenv = "^1.2"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.17"
watchfiles = "^1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
