[project]
name = "web-reader-fastmcp"
version = "0.1.0"
description = "FastMCP server for browser automation via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
	"fastmcp>=2.0.0,<3.0.0",
	"playwright>=1.56.0,<1.57.0",
	"pydantic>=2.10.0,<3.0.0",
	"loguru>=0.7.2,<0.8.0",
]

[dependency-groups]
test = [
	"pytest>=9.0.1,<10.0.0",
	"pytest-asyncio>=1.3.0,<2.0.0",
	"pytest-mock>=3.15.1,<4.0.0",
	"pytest-cov>=7.0.0,<8.0.0",
	"pytest-timeout>=2.2.0,<3.0.0",
	"ruff>=0.14,<0.15",
	"mypy>=1.10.0,<2.0.0",
	"python-dotenv>=1.2,<2.0.0",
]
dev = [
	"ruff>=0.14,<0.15",
]
debug = [
	"debugpy>=1.8.17,<2.0.0",
	"watchfiles>=1.1,<2.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"server.py" = ["PLW0603"]
"src/browser.py" = ["PLW0602", "PLW0603"]
"src/filtering.py" = ["PLW0603"]
"src/rate_limiting.py" = ["PLW0603"]
"src/tools.py" = ["PLR0911", "PLR2004"]
"tests/**/*.py" = ["PLC0415", "PLR2004", "F841"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=fastmcp --cov-report=html --cov-report=term"
