[project]
name = "web-reader-langchain"
version = "0.1.0"
description = "LangChain orchestration service for the Web Reader project."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
	"fastapi>=0.128,<0.129",
	"uvicorn[standard]>=0.40.0,<0.41.0",
	"pydantic>=2.11.0,<3.0.0",
	"python-multipart>=0.0.21,<0.0.22",
	"httpx>=0.28.1,<0.29.0",
	"fastmcp>=2.13,<3.0.0",
	"langchain>=1.1.0,<2.0.0",
	"langchain-core>=1.1.0,<2.0.0",
	"langchain-ollama>=1.0.1,<2.0.0",
	"loguru>=0.7.3,<0.8.0",
]

[dependency-groups]
test = [
	"pytest>=9.0.1,<10.0.0",
	"pytest-asyncio>=1.3.0,<2.0.0",
	"pytest-mock>=3.15.1,<4.0.0",
	"pytest-cov>=7.0.0,<8.0.0",
	"pytest-timeout>=2.2.0,<3.0.0",
	"python-dotenv>=1.2,<2.0.0",
]
debug = [
	"debugpy>=1.8.17,<2.0.0",
	"watchfiles>=1.1,<2.0.0",
]
dev = [
	"ruff>=0.14.10,<0.15.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
